# NL2Git

./: .env.example  .gitignore  README.md  demo.tape  executor.py  main.py  pyproject.toml  requirements.txt  safety.py
nl2git/: engine.py  main.py
src/nl2git/: context.py  engine.py  main.py
